# dataframe_agent

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  job_history.db  pyproject.toml  requirements-dev.txt  requirements.txt
.kiro/specs/llm-python-executor/: design.md  requirements.md  tasks.md
deploy/: README.md
deploy/docker/heavy-job-runner/: .dockerignore  BUILD.md  Dockerfile  README.md
deploy/kubernetes/: DEPLOYMENT_CHECKLIST.md  README.md  configmap.yaml  deploy.sh  executor-service-deployment.yaml  executor-service-hpa.yaml  executor-service-rbac.yaml  executor-service-service.yaml  kustomization.yaml  llm-service-deployment.yaml  llm-service-service.yaml  secrets.yaml  validate.sh
docs/: LOG_AGGREGATION.md  README.md
examples/: README.md  orchestration_example.py
src/llm_executor/: __init__.py
src/llm_executor/executor/: __init__.py  classifier.py  validator.py
src/llm_executor/executor_service/: __init__.py  api.py  error_handlers.py  event_hub_consumer.py  kubernetes_job_manager.py  secure_executor.py
src/llm_executor/job_runner/: __init__.py  runner.py
src/llm_executor/llm_service/: README.md  __init__.py  api.py  orchestration.py
src/llm_executor/shared/: __init__.py  config.py  database.py  exceptions.py  logging_util.py  metrics.py  models.py  (+2 more)
tests/: __init__.py  test_config.py  test_docker_image.py  test_end_to_end_integration.py  test_error_handlers.py  test_event_hub_consumer.py  test_executor_service_api.py  test_llm_service_api.py  test_metrics_endpoint.py  test_orchestration_integration.py
tests/test_properties/: test_classifier_properties.py  test_docker_image_properties.py  test_event_hub_properties.py  test_executor_properties.py  test_job_history_properties.py  test_job_runner_properties.py  test_kubernetes_properties.py  test_logging_properties.py  test_orchestration_properties.py  test_retry_properties.py  test_validator_properties.py
(+4 files in other folders)
