[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-python-executor"
version = "0.1.0"
description = "LLM-Driven Secure Python Execution Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=9.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "pytest-cov>=4.0.0",
]
llm-service = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langgraph>=0.0.1",
]
executor-service = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "kubernetes>=28.0.0",
    "azure-eventhub>=5.11.0",
]
job-runner = [
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "modin>=0.24.0",
    "pyarrow>=14.0.0",
    "cloudpickle>=3.0.0",
    "fsspec>=2023.10.0",
    "adlfs>=2023.10.0",
    "s3fs>=2023.10.0",
    "numba>=0.58.0",
    "azure-eventhub>=5.11.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-python-executor"
Documentation = "https://github.com/yourusername/llm-python-executor/docs"
Repository = "https://github.com/yourusername/llm-python-executor"
Issues = "https://github.com/yourusername/llm-python-executor/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_executor*"]

[tool.setuptools.package-data]
llm_executor = ["py.typed"]
